// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`🎯 ReactFlowDiagram 컴포넌트 > 스냅샷 테스트 > 기본 다이어그램 스냅샷 1`] = `
<div
  class="flex flex-col space-y-4"
>
  <div
    class="text-center"
  >
    <h3
      class="mb-2 text-xl font-bold text-slate-800"
    >
      Test Architecture
    </h3>
    <p
      class="mx-auto max-w-2xl text-sm text-slate-500"
    >
      Test description for the architecture diagram
    </p>
  </div>
  <div
    class="rounded-xl border border-slate-200 bg-white shadow-sm h-[48dvh] sm:h-[50dvh] lg:h-[52dvh] max-h-[380px] sm:max-h-card-lg lg:max-h-[440px]"
  >
    <div
      data-edges="2"
      data-nodes="7"
      data-testid="react-flow-container"
    >
      <div
        data-testid="react-flow-background"
      />
      <div
        data-testid="react-flow-controls"
      />
    </div>
  </div>
  <div
    class="flex flex-wrap justify-center gap-3 border-t border-slate-200 pt-3"
  >
    <div
      class="flex items-center gap-1.5"
    >
      <div
        class="h-2.5 w-2.5 rounded bg-linear-to-br from-yellow-400/60 to-amber-400/60 ring-1 ring-yellow-500/40"
      />
      <span
        class="text-2xs text-slate-500"
      >
        핵심
      </span>
    </div>
    <div
      class="flex items-center gap-1.5"
    >
      <div
        class="h-2.5 w-2.5 rounded bg-indigo-100 ring-1 ring-indigo-300/60"
      />
      <span
        class="text-2xs text-slate-500"
      >
        주요
      </span>
    </div>
    <div
      class="flex items-center gap-1.5"
    >
      <div
        class="h-2.5 w-2.5 rounded bg-slate-100 ring-1 ring-slate-300/60"
      />
      <span
        class="text-2xs text-slate-500"
      >
        보조
      </span>
    </div>
    <div
      class="flex items-center gap-1.5"
    >
      <div
        class="h-3 w-4 border-t border-dashed border-purple-400/70"
      />
      <span
        class="text-2xs text-slate-500"
      >
        검증
      </span>
    </div>
    <div
      class="flex items-center gap-1.5"
    >
      <div
        class="h-3 w-4 border-t border-slate-400/60"
      />
      <span
        class="text-2xs text-slate-500"
      >
        데이터
      </span>
    </div>
  </div>
</div>
`;

exports[`🎯 ReactFlowDiagram 컴포넌트 > 스냅샷 테스트 > 모든 옵션 활성화 스냅샷 1`] = `
<div
  class="flex flex-col space-y-4"
>
  <div
    class="text-center"
  >
    <h3
      class="mb-2 text-xl font-bold text-slate-800"
    >
      Test Architecture
    </h3>
    <p
      class="mx-auto max-w-2xl text-sm text-slate-500"
    >
      Test description for the architecture diagram
    </p>
  </div>
  <div
    class="rounded-xl border border-slate-200 bg-white shadow-sm h-[52dvh] sm:h-[55dvh] lg:h-[58dvh] max-h-[420px] sm:max-h-[460px] lg:max-h-[520px]"
  >
    <div
      data-edges="2"
      data-nodes="7"
      data-testid="react-flow-container"
    >
      <div
        data-testid="react-flow-background"
      />
      <div
        data-testid="react-flow-controls"
      />
      <div
        data-testid="react-flow-minimap"
      />
    </div>
  </div>
  <div
    class="flex flex-wrap justify-center gap-3 border-t border-slate-200 pt-3"
  >
    <div
      class="flex items-center gap-1.5"
    >
      <div
        class="h-2.5 w-2.5 rounded bg-linear-to-br from-yellow-400/60 to-amber-400/60 ring-1 ring-yellow-500/40"
      />
      <span
        class="text-2xs text-slate-500"
      >
        핵심
      </span>
    </div>
    <div
      class="flex items-center gap-1.5"
    >
      <div
        class="h-2.5 w-2.5 rounded bg-indigo-100 ring-1 ring-indigo-300/60"
      />
      <span
        class="text-2xs text-slate-500"
      >
        주요
      </span>
    </div>
    <div
      class="flex items-center gap-1.5"
    >
      <div
        class="h-2.5 w-2.5 rounded bg-slate-100 ring-1 ring-slate-300/60"
      />
      <span
        class="text-2xs text-slate-500"
      >
        보조
      </span>
    </div>
    <div
      class="flex items-center gap-1.5"
    >
      <div
        class="h-3 w-4 border-t border-dashed border-purple-400/70"
      />
      <span
        class="text-2xs text-slate-500"
      >
        검증
      </span>
    </div>
    <div
      class="flex items-center gap-1.5"
    >
      <div
        class="h-3 w-4 border-t border-slate-400/60"
      />
      <span
        class="text-2xs text-slate-500"
      >
        데이터
      </span>
    </div>
  </div>
</div>
`;

exports[`🎯 ReactFlowDiagram 컴포넌트 > 스냅샷 테스트 > 큰 다이어그램 스냅샷 1`] = `
<div
  class="flex flex-col space-y-4"
>
  <div
    class="text-center"
  >
    <h3
      class="mb-2 text-xl font-bold text-slate-800"
    >
      Large Architecture
    </h3>
    <p
      class="mx-auto max-w-2xl text-sm text-slate-500"
    >
      Large diagram with many nodes
    </p>
  </div>
  <div
    class="rounded-xl border border-slate-200 bg-white shadow-sm h-[48dvh] sm:h-[50dvh] lg:h-[52dvh] max-h-[380px] sm:max-h-card-lg lg:max-h-[440px]"
  >
    <div
      data-edges="0"
      data-nodes="8"
      data-testid="react-flow-container"
    >
      <div
        data-testid="react-flow-background"
      />
      <div
        data-testid="react-flow-controls"
      />
    </div>
  </div>
  <div
    class="flex flex-wrap justify-center gap-3 border-t border-slate-200 pt-3"
  >
    <div
      class="flex items-center gap-1.5"
    >
      <div
        class="h-2.5 w-2.5 rounded bg-linear-to-br from-yellow-400/60 to-amber-400/60 ring-1 ring-yellow-500/40"
      />
      <span
        class="text-2xs text-slate-500"
      >
        핵심
      </span>
    </div>
    <div
      class="flex items-center gap-1.5"
    >
      <div
        class="h-2.5 w-2.5 rounded bg-indigo-100 ring-1 ring-indigo-300/60"
      />
      <span
        class="text-2xs text-slate-500"
      >
        주요
      </span>
    </div>
    <div
      class="flex items-center gap-1.5"
    >
      <div
        class="h-2.5 w-2.5 rounded bg-slate-100 ring-1 ring-slate-300/60"
      />
      <span
        class="text-2xs text-slate-500"
      >
        보조
      </span>
    </div>
    <div
      class="flex items-center gap-1.5"
    >
      <div
        class="h-3 w-4 border-t border-dashed border-purple-400/70"
      />
      <span
        class="text-2xs text-slate-500"
      >
        검증
      </span>
    </div>
    <div
      class="flex items-center gap-1.5"
    >
      <div
        class="h-3 w-4 border-t border-slate-400/60"
      />
      <span
        class="text-2xs text-slate-500"
      >
        데이터
      </span>
    </div>
  </div>
</div>
`;
